--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="dark" class="dark">
+<html lang="en" data-bs-theme="dark" class="dark" className="antialiased">
 
 <head>
   <meta charset="UTF-8" />
